fixing overflow issue

--- a/index.css
+++ b/index.css
@@ -15,6 +15,7 @@ html {
   height: 100%;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
   gap: 20px;
   align-items: center;
   justify-content: center;
